intTests/test_optional_args/args002.log.good
Loading file "args002.saw"
Type errors:
  args002.saw:5:14-5:15: Error: Mismatched named parameters.
    Missing from () -> a?Int -> b?Int -> c?Int -> Int:
       d : Int
    Missing from () -> a?Int -> b?Int -> d?Int -> Int:
       c : Int
    Expected: () -> a?Int -> b?Int -> c?Int -> Int
    Found:    () -> a?Int -> b?Int -> d?Int -> Int

  args002.saw:1:27-1:28: Note: The type () -> a?Int -> b?Int -> c?Int -> Int arises from the context of the term
  args002.saw:2:27-2:28: Note: The type () -> a?Int -> b?Int -> d?Int -> Int arises from the context of the term


FAILED
