intTests/test_optional_args/args002.saw
let f a?=1 b?=2 c?=3 () = 0;
let g a?=1 b?=2 d?=3 () = 0;

// These are not the same type and this will fail
let fg = [f, g];
